# mtl4

./: CMakeLists.txt  CTestConfig.cmake  Doxyfile  INSTALL  MTLConfig.cmake  README  SConstruct
libs/: CMakeLists.txt
libs/numeric/itl/test/: CMakeLists.txt  SConscript  absolut_termination_criterion_test.cpp  bicgstab_complex_test.cpp  bicgstab_ell_output_test.cpp  bicgstab_ell_test.cpp  bicgstab_test.cpp  cg_matrix_free_1_test.cpp  cg_matrix_free_test.cpp  cg_test.cpp  concat_pc_test.cpp  exception_test.cpp  gauss_seidel_test.cpp  gmres_preconditioned_test.cpp  gmres_test.cpp  ic_0_bicg_test.cpp  ic_0_bicgstab_2_test.cpp  ic_0_cg_test.cpp  ic_0_cgs_test.cpp  ic_0_krylov_test.cpp  ic_0_test.cpp  idr_s_test.cpp  ilu_0_bicgstab_test.cpp  ilu_0_cg_test.cpp  ilu_0_dispatch_test.cpp  ilu_0_test.cpp  ilut_test.cpp  imf_bicg_test.cpp  is_identity_test.cpp  qmr_test.cpp  quasi_newton_test.cpp  solver_classes_test.cpp  sub_matrix_pc_test.cpp  tfqmr_test.cpp  trans_trans_solver_test.cpp
libs/numeric/linear_algebra/test/: Makefile  SConscript  accumulation_example.cpp  accumulation_measuring.cpp  accumulation_simple.cpp  additive_test.cpp  algebraic_functions.hpp  axiom_diamond.cpp  concept_map_test.cpp  concept_template.cpp  concepts_on_equivalence_classes.cpp  dynamic_concepts.cpp  dynamic_macro_concepts.cpp  float_example.cpp  functions_with_template_arguments_test.cpp  int_example.cpp  is_prime_test.cpp  maybe_print.cpp  mod_n.hpp  mod_n_example.cpp  mod_n_power.cpp  multiplicative_test.cpp  multitype_magma_test.cpp  not_infinite_compile_time.cpp  odd_or_even_test.cpp  positive_real.cpp  positive_real.hpp  positive_real_explicit.cpp  positive_real_power.cpp  positive_real_power.hpp  positive_real_power_explicit.cpp  power.hpp  power_explicit.hpp  power_test.cpp  problems.txt  simple_test.cpp  simple_test2.cpp  sort_test.cpp  string_example.cpp  vector_test.cpp  (+2 more)
libs/numeric/mtl/doc/: mtl4_main.css  mtl4_tabs.css  mtl4_template.css
libs/numeric/mtl/examples/: CMakeLists.txt  SConscript  array_initialization.cpp  bands.cpp  complete_iteration.cpp  compressed2D.cpp  dense2D.cpp  dot_example.cpp  doxygen_footer.html  doxygen_footer_p1.html  doxygen_footer_p2.html  doxygen_header.html  eigenvalue_example.cpp  eigenvalue_symmetric_example.cpp  element_matrix.cpp  element_structure_example.cpp  fixed_size_example.cpp  gdbinit_example.hpp  hessenberg_example.cpp  ilu_0_bicgstab.cpp  ilu_0_complex_cg_example.cpp  ilu_0_float_cg_example.cpp  imf_example.cpp  init_list_example.cpp  insert.cpp  insert_class.cpp  insert_class_expensive.cpp  insert_scope.cpp  inv_matrix.cpp  inverse_matrix.cpp  lower.cpp  lu_example.cpp  matrix1.cpp  matrix2.cpp  matrix_addition.cpp  matrix_free_1.cpp  matrix_free_2.cpp  matrix_free_3.cpp  matrix_free_cg.cpp  matrix_free_pcg.cpp  (+49 more)
libs/numeric/mtl/examples/images/: 2by3grid.tex
libs/numeric/mtl/examples/matrix_market/: sudoku_demanding.mtx  sudoku_easy.mtx  sudoku_very_challenging.mtx  sudoku_very_challenging_2.mtx
libs/numeric/mtl/examples/nesting/: blas_functor.hpp  blas_functor_auto.hpp  blas_functor_comp.hpp  blas_functor_cond.hpp  blas_functor_mtl.hpp  blas_functor_ugly.hpp  comp_example.hpp  functor.hpp  (+4 more)
libs/numeric/mtl/experimental/: CMakeLists.txt  Polynomklasse_templ.hpp  SConscript  algebraic_category.cpp  bisection.cpp  block_matrix_2x1.cpp  block_matrix_2x2.cpp  boost_operator_conflict.cpp  boost_rational_test.cpp  const_correctness_test.cpp  determinant_test.cpp  eigenvalues_givens_exp.cpp  endl_test.cpp  experimental_empty.cpp  fem15.cpp  ginac.cpp  gmp_test.cpp  ilut_cg_test.cpp  insertion_timing.cpp  iterator_adapter.cpp  lazy_assign.cpp  linFEM_mp_real.cpp  mat_vec_mult_timing.cpp  meta_concept_compiler_optimization.cpp  mp_lu_test.cpp  mp_mtl_kompatibilitaet.cpp  mtl_gdb_test.cpp  ode_solver.cpp  portfolio_test.cpp  random_matrix_inserter_test.cpp  ranged_for_exp.cpp  row_access_exp.cpp  scaling_test.cpp  semblance_test.cpp  simulated_annealing.cpp  strassen_odd.cpp  strassen_tmp.cpp  tabak_test.cpp  trans_scale_test.cpp  tridiagonal_solve.cpp  (+5 more)
libs/numeric/mtl/test/: CMakeLists.txt  PA_test.cpp  SConscript  add_row_test.cpp  algebraic_category_test.cpp  ams_test.cpp  arprec_test.cpp  array_initialization_test.cpp  assign_test.cpp  band_test.cpp  base_case_conversion_test.cpp  bit_masking_test.cpp  block_diagonal2D_test.cpp  block_sparse_test.cpp  cholesky_test.cpp  complexity_test.cpp  compressed2D_inserter2_test.cpp  compressed2D_inserter3_test.cpp  compressed2D_inserter_print_test.cpp  compressed2D_inserter_test.cpp  compressed2D_pointer_constructor_test.cpp  compressed2D_symmetry_test.cpp  compressed2D_test.cpp  compressed2d_access_test.cpp  conj_mult_test.cpp  coordinate2D_test.cpp  create_element_structure_test.cpp  crop_test.cpp  cross_product_test.cpp  cuppen_svd_test.cpp  dense2D_test.cpp  dense_lu_test.cpp  dense_vector_2_test.cpp  dense_vector_iterator_test.cpp  dense_vector_num_row_defition_test.cpp  dense_vector_test.cpp  diagonal_setup_test.cpp  dilated_int_test.cpp  direct_access_test.cpp  divide_by_inplace_test.cpp  (+165 more)
libs/numeric/mtl/test_with_optimization/: SConscript
libs/numeric/mtl/timing/: CMakeLists.txt  SConscript  assembly_timing.cpp  cg_timing.cpp  cholesky_timing.cpp  compressed2D_inserter_timing.cpp  guiseppe_main.cpp  ic_0_cg_timing.cpp  ilu_0_bicg_timing.cpp  ilu_0_bicgstab_2_timing.cpp  ilu_0_bicgstab_ell_timing.cpp  ilu_0_cg_timing.cpp  ilu_0_timing.cpp  ilut_cg_timing.cpp  linpack_timing.cpp  mat_mat_vec_timing.cpp  matrix_addition_timing.cpp  matrix_free_1_timing.cpp  matrix_free_2_timing.cpp  matrix_free_cg_slow_timing.cpp  matrix_free_cg_timing.cpp  matrix_fsize_product_timing.cpp  matrix_product_timing.cpp  matrix_vector_product_timing.cpp  memory_consumption_during_insertion.cpp  multi_vector_vs_vector_timing.cpp  no_inline_ext.cpp  no_inline_papi_timing.cpp  no_inline_timing.cpp  rec_matrix_product_timing.cpp  run_matrix_product_timing  sparse_matrix_vector_timing.cpp  timing_empty.cpp  two_norm_timing.cpp  vector_expr_dynamic_timing.cpp  vector_expr_timing.cpp  vector_expr_unroll_timing.cpp  xerbla.c
(+486 files in other folders)
